--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <main>
 <a href="https://www.bbc.co.uk/">supposedly unbiased news</a> 
 <div>
-p>Kitty ipsem and all that jazz</p>
+<p>Kitty ipsem and all that jazz</p>
 <ul>
     <li>Stephen</li>
     <li>William</li>
