--- a/index.html
+++ b/index.html
@@ -16,15 +16,18 @@
     .green-text {color: green;}
     p {font-family: sans-serif; text-align: right;}
     ol {font-family: Lobster, monospace;}
+    ul{font-size: 27px;}
     .smaller-image {width: 200px;}
     .fat-orange-border {border-color: orange; border-width: 10px; border-style: solid; border-radius: 20%;}
     .silver-background {background-color: silver;}
+    .opaque-blue {background-color: rgba(00, 00, 255, 0.2)}
     #game-form {background-color: yellow; color: blue;}
     .blue-box {background-color: blue; padding: 40px 20px 20px 40px; margin:1.5em; width: 250px; height: 20px}
     [type='radio'] {margin: 20px 0px 15px 0px;}
 body {background-color: white; color: brown;} 
+#box-shadow {box-shadow: 0 10px 20px rgba(0,0,0,0.19); opacity: 0.7;}
 </style>
-<h3>Dirty Kitty Litter</h3>
+<h3 class="opaque-blue">Dirty Kitty Litter</h3>
 <h4>There's a bluebird in my heart</h4>
 <main>
 <a href="https://www.bbc.co.uk/">supposedly unbiased news</a> 
@@ -41,11 +44,11 @@ body {background-color: white; color: brown;}
 <ol>
     <li>Final Fantasy 7</li>
     <li>Tales from the Borderlands</li>
-    <li>Half Life 2</li>
+    <li><em>Half Life 2</em></li>
     <li>Life is Strange 2</li>
-    <li>Deus Ex: Human Revolution</li>
+    <li><s>Red Alert 2</s> Deus Ex: Human Revolution</li>
 </ol>
-<p style="text-align: justify;">Yours can go below</p>
+<p style="text-align: justify;"><em>Yours</em> can go below</p>
 <form id="game-form" action="www.robgamesarethebest.com/whatasicklistm8">
 <input type="text" placeholder="Unreal Tournament" required>
 <button type="submit">Submit</button><br>
@@ -57,10 +60,11 @@ body {background-color: white; color: brown;}
 <label for="RTS"><input id="RTS" type="checkbox" name="Genre" value="RTS"> RTS</label>
 <label for="MMO"><input id="MMO" type="checkbox" name="Genre" value="MMO"> MMO</label>
 </form>
+<hr>
 <h5 class="blue-box">This is a blue box</h5>
 <img class="smaller-image"
 src="https://i.pinimg.com/originals/01/4c/cf/014ccf7549554c496c6099c4f4f1a6fc.jpg" alt="SPACE THE FINAL FRONTIER.">    
-<p>Purr jump eat the grass rip the couch scratched sunbathe, shed everywhere rip the couch sleep in the sink fluffy fur catnip scratched.</p>
+<p id="box-shadow">Purr jump eat the grass rip the couch scratched sunbathe, shed everywhere rip the couch sleep in the sink fluffy fur catnip scratched.</p>
 </main>
 <a href="https://www.google.co.uk/"><img class="smaller-image fat-orange-border" src="https://i1.sndcdn.com/artworks-000153983978-ksta8a-t500x500.jpg" alt="free to use"></a>
     </body>
