--- a/index.html
+++ b/index.html
@@ -10,22 +10,26 @@
 -->
 <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
 <style>
-    h3 {color: purple;}
-    h4 {text-align: center;}
+    h3 {color: purple; font-weight: 500;}
+    h4 {text-align: center; font-size: 30px; position: relative; top: 150px;}
     .blue-text {color:blue !important;}
     .green-text {color: green;}
-    p {font-family: sans-serif; text-align: right;}
+    p {font-family: sans-serif; text-align: right; line-height: 50px;}
     ol {font-family: Lobster, monospace;}
-    ul{font-size: 27px;}
-    .smaller-image {width: 200px;}
+    ul{font-size: 27px; text-transform: uppercase;}
+    .smaller-image {width: 200px; float: right;}
     .fat-orange-border {border-color: orange; border-width: 10px; border-style: solid; border-radius: 20%;}
     .silver-background {background-color: silver;}
     .opaque-blue {background-color: rgba(00, 00, 255, 0.2)}
     #game-form {background-color: yellow; color: blue;}
     .blue-box {background-color: blue; padding: 40px 20px 20px 40px; margin:1.5em; width: 250px; height: 20px}
     [type='radio'] {margin: 20px 0px 15px 0px;}
+    .orange-box {background-color: orange; padding: 30px 20px 20px 30px; margin: auto; width: 150px;}
 body {background-color: white; color: brown;} 
 #box-shadow {box-shadow: 0 10px 20px rgba(0,0,0,0.19); opacity: 0.7;}
+a:hover {color: blue;}
+button {position: absolute; right: 150px;}
+h1 {position: fixed; top: 0px; z-index: 2;}
 </style>
 <h3 class="opaque-blue">Dirty Kitty Litter</h3>
 <h4>There's a bluebird in my heart</h4>
@@ -62,9 +66,10 @@ body {background-color: white; color: brown;}
 </form>
 <hr>
 <h5 class="blue-box">This is a blue box</h5>
+<h6 class="orange-box">This is the orange box</h6>
 <img class="smaller-image"
 src="https://i.pinimg.com/originals/01/4c/cf/014ccf7549554c496c6099c4f4f1a6fc.jpg" alt="SPACE THE FINAL FRONTIER.">    
-<p id="box-shadow">Purr jump eat the grass rip the couch scratched sunbathe, shed everywhere rip the couch sleep in the sink fluffy fur catnip scratched.</p>
+<p id="box-shadow">Some random cat text that makes no sense to me but it is also for the line height. Purr jump eat the grass rip the couch scratched sunbathe, shed everywhere rip the couch sleep in the sink fluffy fur catnip scratched.</p>
 </main>
 <a href="https://www.google.co.uk/"><img class="smaller-image fat-orange-border" src="https://i1.sndcdn.com/artworks-000153983978-ksta8a-t500x500.jpg" alt="free to use"></a>
     </body>
