--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ h1 {position: fixed; top: 0px; z-index: 2;}
 #ball1 {left: 20%;}
 #ball2 {left: 65%; transform: scale(2);}
 div {border-radius: 20px; width: 70%; height: 400px; margin: 50px auto; background: repeating-linear-gradient(35deg, #CCFFFF 0px, #FFCCCC 30px);}
+div:hover {transform: scale(1.1);}
 </style>
 <h3 class="opaque-blue">Dirty Kitty Litter</h3>
 <h4>There's a bluebird in my heart</h4>
