nav-section-article

--- a/keyframes.html
+++ b/keyframes.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+<head>
 <style>
     div {
       height: 40px;
@@ -31,5 +34,31 @@
   100% {background-color: #4791d0;}
 }
   </style>
+  </head>
+  <body>
+    <header>
+      <h1>Aspects of Cello Technique</h1>
+    <nav>
+      <ul>
+        <li><a href="#bow">The Bow</a></li>
+        <li><a href="#vib">Vibrato</a></li>
+        <li><a href="#into">Intonation</a></li>
+      </ul>
+    </nav>
+    </header>
+    <main>
+      <section id="bow"><h2>The Bow</h2>
+      <article><h3>Bow weight, bow speed and point of contact are the main factors that determine the sound produced by the bow.</h3></article>
+    <article><h3>Without the bow, there is no sound. Except pizzicato.</h3></article></section>
+    <section id="vib"><h2>Vibrato</h2>
+    <article><h3>Vibrato is a left hand technique that can be varied primarily by width and intensity.</h3></article>
+  <article><h3>Vibrato should be equally confident on every finger and every position of the fingerboard.</h3></article></section>
+  <section id="into"><h2>Intonation</h2>
+  <article><h3>Precise intonation should always be strived towards.</h3></article>
+<article><h3>The key to good practice is honesty.</h3></article></section>
+
   <div id="rect"></div>
   <button>Register</button>
+  </main>
+  </body>
+  </html>
