--- a/keyframes.html
+++ b/keyframes.html
@@ -56,9 +56,17 @@
   <section id="into"><h2>Intonation</h2>
   <article><h3>Precise intonation should always be strived towards.</h3></article>
 <article><h3>The key to good practice is honesty.</h3></article></section>
-
+<p>A clip of some cello playing.</p>
+<audio id="celloBach" controls>
+  <source src="#" type="audio/mpeg">
+</audio>
+<br>
+<label for="pickdate">Preferred Date:</label>
+<input type="date" id="pickdate" name="date">
+<input type="submit" name="submit" value="Submit">
   <div id="rect"></div>
-  <button>Register</button>
+  <button>Register</button><br>
   </main>
+  <footer>&copy; 2018 RJ</footer>
   </body>
   </html>
