--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         .silver-background {background-color: silver;}
         .opaque-blue {background-color: rgba(00, 00, 255, 0.2)}
         #game-form {background-color: yellow; color: blue;}
-        .blue-box {background-color: blue; padding: 40px 20px 20px 40px; margin: 1.5em; width: 250px; height: 20px}
+        .blue-box {background-color: blue; padding: 40px 20px 20px 40px; margin: 1.5em; max width: 250px; height: auto;}
         [type='radio'] {margin: 20px 0px 15px 0px;}
         .orange-box {background-color: orange; padding: 30px 20px 20px 30px; margin: auto; width: 150px;}
     body {background-color: white; color: green;} 
