--- a/keyframes.html
+++ b/keyframes.html
@@ -33,6 +33,14 @@
 @keyframes background-color {
   100% {background-color: #4791d0;}
 }
+.sr-only {
+    position: absolute;
+    left: -10000;
+    width: 1px;
+    height: 1px;
+    top: auto;
+    overflow: hidden;
+}
   </style>
   </head>
   <body>
