--- a/Viewports.html
+++ b/Viewports.html
@@ -1,6 +1,41 @@
-<!--<style>
+<style>
     h2 {width: 80vw;}
     p {width: 75vmin;}
     h3 {height: 100vmax;}
     h1 {height: 60vh;}
-    </style> -->
+    
+    header {
+    display: flex;
+    flex-direction: reverse-row;
+    justify-content: flex-start;
+      }
+      #box-container {
+    background: gray;
+    display: flex;
+    height: 500px;
+justify-content: space-around;
+align-items: baseline;
+flex-wrap: wrap;
+  }
+  #box-1 {
+    background-color: dodgerblue;
+    align-self: flex-end;
+    order: 2;
+    width: 25%;
+    height: 100%;
+    flex: 1 1 20em;
+  }
+  #box-2 {
+    background-color: orangered;
+    order: 1;
+    width: 25%;
+    height: 100%;
+    flex-basis: 20em;
+    flex-shrink: 2;
+  }
+</style>
+<div id="box-container">
+  <div id="box-1"></div>
+  <div id="box-2"></div>
+</div>
+    </style>
