--- a/CSS Grid.html
+++ b/CSS Grid.html
@@ -3,13 +3,16 @@
     .d2{background:LightSalmon;}
     .d3{background:PaleTurquoise;}
     .d4{background:LightPink;}
-    .d5{background:PaleGreen;}
+    .d5{background:PaleGreen; grid-column: 2 / 4;}
   
     .container {
       font-size: 40px;
       width: 100%;
       background: LightGray;
   display: grid;
+  grid-template-columns: 80px 80px 80px;
+  grid-template-rows: 1fr auto 50px 20%;
+  grid-gap: 5px 10px;
     }
   </style>
   
