--- a/CSS Grid.html
+++ b/CSS Grid.html
@@ -1,8 +1,8 @@
 <style>
-    .d1{background:LightSkyBlue;}
-    .d2{background:LightSalmon;}
-    .d3{background:PaleTurquoise;}
-    .d4{background:LightPink;}
+    .d1{background:LightSkyBlue; grid-area: header;}
+    .d2{background:LightSalmon; justify-self: center;}
+    .d3{background:PaleTurquoise; align-self: end;}
+    .d4{background:LightPink; grid-area: 1/1/2/4;}
     .d5{background:PaleGreen; grid-column: 2 / 4;}
   
     .container {
@@ -10,9 +10,13 @@
       width: 100%;
       background: LightGray;
   display: grid;
-  grid-template-columns: 80px 80px 80px;
-  grid-template-rows: 1fr auto 50px 20%;
+  grid-template-columns: repeat(auto-fit, minmax(70px, 80px));
+  grid-template-rows: repeat(auto-fill, 1fr auto 50px 20%);
   grid-gap: 5px 10px;
+  grid-template-areas:
+  "header header header"
+  "advert content content"
+  "footer footer footer"
     }
   </style>
   
