--- a/Form.html
+++ b/Form.html
@@ -26,5 +26,6 @@
         <h2>Age (optional)</h2>
         <input id="number" type="number" placeholder="Age">
         </form>
+        </main>
+        </body>
         </html>
-     
