--- a/Product.html
+++ b/Product.html
@@ -8,6 +8,11 @@
       #header-img
       #nav-bar 
       .nav-link {font-size: 20px;}
+      h2 {text-align: center;}
+      #video {margin: auto 400px;}
+      #form
+      #email
+      #email-label
       </style>
   </head>
   <body>
@@ -17,9 +22,29 @@
         <h1>From Cremona to Yamaha</h1>
         <nav id="nav-bar">
           <a class="nav-link" href="#range">Our Range</a>
-          <a class="nav-link" href="which">Which 'cello should I buy?</a>
-          <a class="nav-link" href="#price">Pricing</a>
+          <a class="nav-link" href="#which">Which cello should I buy?</a>
+          <a class="nav-link" href="#price">Pricing</a></nav>
       </header>
-      </main>
-      </body>
-      </html>
+      <section id="range"><h2><u>Our Range</u></h2>
+        <article><h3>Whether you want a classic old Italian instrument, a durable and expensive sounding carbon fibre model, or a versatile electric cello, we've got you covered.</h3></article>
+        <article><h3>We offer the finest cellos known to man, in our Stradivarius collection.</h3></article>
+        <article><h3>Our carbon fibre cellos are guaranteed by our experienced makers to satisfy all your performance needs, without the worry of being sensitive to temparature changes or weather conditions.</h3></article>
+        <article><h3>Our badass electric cellos made by Yamaha provide the ultimate in versatility, not to mention a sleek cool aesthetic.</h3></article>
+      </section>
+      <section id="which"><h2><u>Which cello should I buy?</u></h2>
+        <article><h3>That's easy enough, you need all three. Nothing else will suffice! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3></article>
+      </section>
+      <section id="price">
+        <h2><u>Pricing</u></h2>
+        <article><h3>Stradivarius - £1,000,000</h3></article>
+        <article><h3>Carbon Fibre cello - £300,000</h3></article>
+        <article><h3>Yamaha SVC 150 - £120,000</h3></article>
+        </section>
+      <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/_aMJ21HwlT0"></iframe><br><br>
+      <form id="form">
+        <label id="email-label">If you would like to arrange a consultation session, please enter your email below and we will contact you to arrange a time.</label><br>
+        <input id="email" type="email" placeholder="Enter your email address">
+        </form>
+        </main>
+        </body>
+        </html>
