--- a/Product.html
+++ b/Product.html
@@ -16,7 +16,7 @@
       #submit
       nav {position: fixed; top: 0;
 width: 100%;}
-ul {
+ul {  
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -29,13 +29,11 @@ li a {
   text-decoration: none;
   color: black;
   padding 9px 15px;}
+  nav {position: fixed; top: 0;
+width: 100%;}
 li a:hover {
   background-color: #0F196E;
   color: white;}
-nav {
-position: fixed;
-top: 0;
-width: 100%;}
 @media (max-height: 800px ){
   h2{font-size: 10px;}}
       </style>
