--- a/Technical D.html
+++ b/Technical D.html
@@ -6,22 +6,67 @@
       #main-doc {background-color: #F7E3A7;}
       h1 {text-align: center;}
       .main-section {font-family: helvetica;}
+      #safety
+      #Breathing
+      #Patience
+      #Acceptance
+      #Gratitude
+      .nav-link
+      @media (max-height: 800px){p{font-size: 10px;}}
+#navbar {
+  position: fixed;
     </style>
     <body>
       <main id="main-doc">
         <h1>Introduction to Yoga</h1>
-        <section class="main-section">
-          <header>Safety</header>
+        <nav id="navbar">
+            <header><u>Some basic points on yoga</u></header>
+            <ul>
+            <li>
+              <a class="nav-link" href="#Safety">Safety</a></li>
+            <li><a class="nav-link" href="#Breathing">Breathing</a></li>
+            <li><a class="nav-link" href="#Patience">Patience</a></li>
+            <li><a class="nav-link" href="#Acceptance">Acceptance</a></li>
+              <li><a class="nav-link" href="#Gratitude">Gratitude</a></li></ul></nav><br>
+            <section class="main-section" id="Safety">
+          <header><b>Safety</b></header>
+          <p>The most important starting point for yoga is to make sure you're practising it safely - if something hurts or doesn't feel right then feel free to back off.</p>
+          <p>Similarly, warming up before attempting the more challenging poses is vital to avoid injury.</p>
+          <code> x = 5;
+            y = 6;
+            z = x + y;</code>
+          <ul>
+            <li>Head</li>
+            <li>Shoulders</li>
+            <li>Knees</li>
+            <li><s>Coccyx</s></li>
+            <li>Toes</li>
+        </section><br>
+        <section class="main-section" id="Breathing">
+          <header><b>Breathing</b></header>
+          <p><sup>What about beatbox?</sup>IT'S HARD TO BREATH.</p>
+          <p>Seriously though, yoga is all about the breath; just be aware of it.</p>
+          <code> p {background-color: blue; font-size: 70;}
+        </section><br>
+        <section class="main-section" id="Patience">
+          <header><strong>Patience</strong></header>
+          <p>Yoga is a very good way to learn patience. When you start out you'll find you initially improve very fast, but that certain poses seem way beyond you - usually the ones you most want to be able to do.</p>
+          <p>Keep practising, be patient and in time these will come.</p>
+          <code>#piggywiggywoo {height: 40px; width: 70%; background: pink; margin: 50px auto; border-radius: 5px; position: relative;}
+        </section><br>
+        <section class="main-section" id="Acceptance">
+          <header><b>Acceptance</b></header>
+          <p>Your body is different every day. Some days you'll be able to do everything you want to, and some days you won't. Learn to accept this.</p>
+          <p>In time you'll get a sense of how you're feeling physically on any given day and know what to expect.</p>
+          <code>h1 {text-align: center; padding: 20px 20px 50px 50px;}
+            </section></br>
+        <section class="main-section" id="Gratitude">
+          <header><strong>Gratitude</strong></header>
+          <p>It's important not only to accept what your body to do, but to be grateful to it.</p>
+          <p>Yoga teachers love gratitude like bishops love Alien.</p>
+          <code> .bishop {color: white;}
         </section>
-        <section class="main-section">
-          <header>Breathing</header>
-        </section>
-        <section class="main-section">
-          <header>Patience</header>
-        </section>
-        <section class="main-section">
-          <header>Acceptance</header>
-        </section>
-        <section class="main-section">
-          <header>Gratitude</header>
-        </section>
+        </main>
+    </body>
+    </head>
+    </html>
