--- a/Form/Form.html
+++ b/Form/Form.html
@@ -1,21 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Tribute page for FCC</title>
-    <style>
-      #title {text-align: center;}
-      #main {background: url(https://cdn.pixabay.com/photo/2018/01/25/17/48/fantasy-3106688_960_720.jpg); font-family: helvetica; background-repeat: no-repeat; background-size: 1500px auto; color: white;}
-      #description {text-align: center;}
-      #survey-form {margin: auto 400px; width: 400px;}
-      #name
-      #name-label
-      #email
-      #email-label
-      #number
-      #number-label
-      #dropdown
-      #submit
-    </style>
+    <title>Survey page for FCC</title>
+    <link rel="stylesheet" href="main.css"></link>
   </head>
   <body>
     <main id="main">
