--- a/Technical D/Technical D.html
+++ b/Technical D/Technical D.html
@@ -2,20 +2,8 @@
 <html>
   <head>
     <title id="title">Technical Documentation Page</title>
-    <style>
-      #main-doc {background-color: #F7E3A7;}
-      h1 {text-align: center;}
-      .main-section {font-family: helvetica;}
-      #safety
-      #Breathing
-      #Patience
-      #Acceptance
-      #Gratitude
-      .nav-link
-      @media (max-height: 800px){p{font-size: 10px;}}
-#navbar {
-  position: fixed;
-    </style>
+    <link rel="stylesheet" href="main.css"></link>
+    </head>
     <body>
       <main id="main-doc">
         <h1>Introduction to Yoga</h1>
@@ -68,5 +56,4 @@
         </section>
         </main>
     </body>
-    </head>
     </html>
